[package]
name = "rusty_maze"
version = "0.1.0"
authors = ["Kyle Cronin <cronik@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
termion = "1"
thiserror = "1.0"
structopt = "0.3"