[package]
name = "rusty_maze"
version = "0.2.1"
authors = ["Kyle Cronin <cronik@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
termion = "1"
thiserror = "1.0"
structopt = "0.3"
serde = "1.0"
ron = "0.6"